# waiter_bot

bucketbot_description/: CMakeLists.txt  package.xml
bucketbot_description/launch/: display_robot_model.launch~  display_robot_model_laser.launch  display_robot_model_laser.launch~  display_robot_model_visual.launch  display_robot_model_visual.launch~  display_robot_model_visual_u5.launch
bucketbot_description/meshes/: base_link.stl  left_wheel_link.stl  motor_link.stl  omini_wheel_link.stl  pole_link.stl  right_wheel_link.stl  top_plate_link.stl  ultrasonic_link.STL
bucketbot_description/urdf/: bucketbot.urdf~  bucketbot_laser.urdf  bucketbot_laser.urdf~  bucketbot_visual.urdf  bucketbot_visual.urdf~  bucketbot_visual_u5.urdf
kinect2_bringup/: CMakeLists.txt  package.xml
kinect2_bringup/launch/: kinect2_depth2laser.launch  kinect2_depth2laser_modify.launch  kinect2_depth2laser_modify.launch~  kinect2_depth2laser_rviz_view.launch  kinect2_depth2laser_rviz_view.launch~  kinect2_gmapping.launch  kinect2_gmapping_rviz_view.launch  kinect2_gmapping_rviz_view.launch~  kinect2_nav.launch  kinect2_nav.launch~  kinect2_nav_rviz_view.launch  sensor.launch  xtion_depth2laser.launch  xtion_depth2laser.launch~  xtion_depth2laser_modify.launch  xtion_depth2laser_modify.launch~
kinect2_bringup/map/: 1.pgm  1.yaml~  2.pgm  2.yaml
kinect2_bringup/nav_config/: base_local_planner_params.yaml  base_local_planner_params.yaml~  costmap_common_params.yaml  (+2 more)
waiterbot_description/: CMakeLists.txt  package.xml
water_description/: CMakeLists.txt  package.xml  urdf.rviz
(+48 files in other folders)
